# BeatState-AF

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
beatstate_af/: config.py  e01v2.py  interfaces.py  provenance.py
beatstate_af/data/: patient_split.py  synthetic.py  wfdb_io.py
configs/: protocol_v1.yaml  protocol_v2.yaml
docs/: claude_code_playbook.md  discordance_definition.md  e01v1_audit.md  e01v2_protocol.md  failure_registry.md  metric_policy_v2.md  novelty_map.md  protocol.md
experiments/: run_e01v2_kill_gate.py  run_e01v2_validation.py  run_external.py  run_kill_gate.py  run_personalization.py  run_saturation.py
manifests/: afdb_checksums.json  afdb_records.json  afdb_split_v2.json
scripts/: _fetch_afdb_prefix.py  create_afdb_split_v2.py  download_data.py  make_e01v2_figures.py  make_figures.py  run_e01v2_statistics.py  verify_clean_tree.py  verify_e01v2_artifacts.py  verify_memory_ledger.py  verify_results.py  verify_split_manifest.py  write_e01v2_decision.py  write_environment_report.py
tests/: run_tests.py  test_causal_preprocessing.py  test_e01v2_split_and_seeds.py  test_gru_interface.py  test_matched_capacity.py  test_memory_ledger.py  test_metric_policy_v2.py  test_noninferiority.py  test_patient_disjoint.py  test_patient_unit_statistics.py  test_provenance.py  test_qrs.py  test_qrs_reference_metrics.py  test_qrs_streaming_parity.py  test_smoke_kill_gate.py  test_streaming_dtype.py  test_streaming_prediction_parity.py  test_wfdb_io.py
(+49 files in other folders)
